add dump cpu&&memory support

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "optimist": ">=0.6.0",
     "cliff" : ">=0.1.8",
     "pomelo-admin" : ">=0.1.4",
-    "pomelo-logger" : ">=0.0.3"
+    "pomelo-logger" : ">=0.0.3",
+    "async" : ">=0.1.0"
   },
   "author": "fantasyni",
   "license": "BSD"
