add pomelo cli for redis

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "cliff" : ">=0.1.8",
     "node-zookeeper-client": "0.2.2",
     "pomelo-logger" : ">=0.0.3",
-    "async" : ">=0.1.0"
+    "async" : ">=0.1.0",
+    "redis" : "2.0.1"
   },
   "author": "fantasyni",
   "license": "MIT"
