--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "optimist": ">=0.6.0",
     "cliff" : ">=0.1.8",
+    "eyes" : ">=0.1.8"
     "node-zookeeper-client": "0.2.2",
     "pomelo-logger" : ">=0.0.3",
     "async" : ">=0.1.0",
