--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pomelo-cli",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Pomelo command line client for managing pomelo",
   "main": "index.js",
   "scripts": {
@@ -19,7 +19,7 @@
   "dependencies": {
     "optimist": ">=0.6.0",
     "cliff": ">=0.1.8",
-    "pomelo-admin": "0.4.x",
+    "pomelo-admin": ">=1.0.0",
     "pomelo-logger": ">=0.0.3",
     "async": ">=0.1.0"
   },
